--- a/app/src/main/res/layout/item_receipt.xml
+++ b/app/src/main/res/layout/item_receipt.xml
@@ -97,6 +97,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/tvstatus"
         app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@drawable/icon_done" />
+        app:srcCompat="@drawable/ic_done" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
