--- a/app/src/main/res/layout/fragment_view_all_cbo.xml
+++ b/app/src/main/res/layout/fragment_view_all_cbo.xml
@@ -6,12 +6,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
     tools:context=".ui.shop.Activity.ViewAllCboFragment">
+
     <ImageView
         android:id="@+id/img_back_ViewAllCbo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView28"
+        app:layout_constraintBottom_toBottomOf="@+id/textView40"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textView40"
         app:srcCompat="@drawable/ic_back" />
@@ -29,7 +30,7 @@
         android:id="@+id/textView40"
         style="@style/Text"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="35dp"
         android:layout_marginTop="30dp"
         android:text="Tất Cả Sản Phẩm"
         android:textSize="20sp"
