--- a/app/src/main/res/layout/fragment_view_all_hot.xml
+++ b/app/src/main/res/layout/fragment_view_all_hot.xml
@@ -8,35 +8,37 @@
     tools:context=".ui.shop.Activity.ViewAllHotFragment">
 
     <ImageView
-        android:id="@+id/img_back_ViewAllCbo"
+        android:id="@+id/img_back_ViewAllHot"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView28"
+        app:layout_constraintBottom_toBottomOf="@+id/textView40"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textView40"
         app:srcCompat="@drawable/ic_back" />
+
     <ImageView
         android:id="@+id/imageView28"
         android:layout_width="0dp"
         android:layout_height="2dp"
         android:layout_marginTop="5dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.454"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView40"
         app:srcCompat="@drawable/ic_vienduoi" />
+
     <TextView
         android:id="@+id/textView40"
         style="@style/Text"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="35dp"
         android:layout_marginTop="30dp"
         android:text="Tất Cả Sản Phẩm"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.397"
-        app:layout_constraintStart_toEndOf="@+id/img_back_ViewAllCbo"
+        app:layout_constraintStart_toEndOf="@+id/img_back_ViewAllHot"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
