--- a/app/src/main/res/layout/activity_invoicedetails.xml
+++ b/app/src/main/res/layout/activity_invoicedetails.xml
@@ -63,6 +63,7 @@
                 android:layout_marginTop="15dp"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:padding="5dp"
                 android:layout_marginHorizontal="130dp"
                 android:background="@drawable/bg_btn_repurchase"
                 style="@style/Text"
@@ -73,7 +74,21 @@
                 android:textSize="18dp"
                 app:layout_constraintTop_toTopOf="parent" />
 
-
+            <TextView
+                android:id="@+id/tv"
+                android:layout_marginTop="15dp"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:padding="5dp"
+                android:layout_marginHorizontal="130dp"
+                android:background="@drawable/bg_btn_hoantat"
+                style="@style/Text"
+                android:textColor="#0000ff"
+                android:fontFamily="@font/be_vietnam_bold"
+                android:gravity="center"
+                android:text="Hoàn Tất"
+                android:textSize="18dp"
+                app:layout_constraintTop_toTopOf="parent" />
 
 
 
