--- a/app/src/main/res/layout/item_receipt.xml
+++ b/app/src/main/res/layout/item_receipt.xml
@@ -2,10 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ctrLayoutReceipt"
     android:layout_width="match_parent"
     android:layout_height="150dp"
     android:layout_margin="5dp"
-    android:id="@+id/ctrLayoutReceipt"
     android:background="@drawable/bg_borders_sp">
 
     <TextView
@@ -30,7 +30,9 @@
         android:text="30 th 9 2022"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/tvstatus"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/guideline37" />
 
     <TextView
         android:id="@+id/tvmoney"
@@ -52,6 +54,7 @@
         android:layout_marginStart="48dp"
         android:layout_marginBottom="15dp"
         android:text="Đã hủy"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvmoney"
@@ -108,4 +111,11 @@
         app:layout_constraintTop_toTopOf="@+id/tvstatus"
         app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/ic_dangdoi" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline37"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.6" />
 </androidx.constraintlayout.widget.ConstraintLayout>
