--- a/app/src/main/res/layout/activity_change_pass.xml
+++ b/app/src/main/res/layout/activity_change_pass.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
         android:layout_marginTop="30dp"
+        android:padding="10dp"
         android:onClick="Back"
         android:src="@drawable/ic_back"
         app:layout_constraintStart_toStartOf="parent"
