--- a/app/src/main/res/layout/activity_confirm_otpactivity.xml
+++ b/app/src/main/res/layout/activity_confirm_otpactivity.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
         android:layout_marginTop="35dp"
+        android:padding="10dp"
         android:onClick="onCLickBackForgotPass"
         android:src="@drawable/ic_back"
         app:layout_constraintStart_toStartOf="parent"
