--- a/app/src/main/res/layout/fragment_change_pas.xml
+++ b/app/src/main/res/layout/fragment_change_pas.xml
@@ -13,7 +13,8 @@
         android:id="@+id/img_back_Changei"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
+        android:layout_marginStart="25dp"
+        android:padding="10dp"
         android:src="@drawable/ic_back"
         app:layout_constraintBottom_toBottomOf="@+id/textView26"
         app:layout_constraintStart_toStartOf="parent"
