--- a/app/src/main/res/layout/fragment_polic.xml
+++ b/app/src/main/res/layout/fragment_polic.xml
@@ -16,6 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="25dp"
+            android:padding="10dp"
             android:src="@drawable/ic_back"
             app:layout_constraintBottom_toBottomOf="@+id/textView26"
             app:layout_constraintStart_toStartOf="parent"
