--- a/app/src/main/res/layout/fragment_receip.xml
+++ b/app/src/main/res/layout/fragment_receip.xml
@@ -14,7 +14,8 @@
             android:id="@+id/img_back_Receipt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
+            android:layout_marginStart="25dp"
+            android:padding="10dp"
             android:src="@drawable/ic_back"
             app:layout_constraintBottom_toBottomOf="@+id/textView26"
             app:layout_constraintStart_toStartOf="parent"
