--- a/app/src/main/res/layout/fragment_view_all_hot.xml
+++ b/app/src/main/res/layout/fragment_view_all_hot.xml
@@ -11,7 +11,8 @@
         android:id="@+id/img_back_ViewAllHot"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
+        android:layout_marginStart="25dp"
+        android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="@+id/textView40"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textView40"
