--- a/app/src/main/res/layout/veryfine_gmail.xml
+++ b/app/src/main/res/layout/veryfine_gmail.xml
@@ -25,18 +25,21 @@
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:textSize="25dp"
-            android:textStyle="bold"
+            android:textSize="25sp"
+            style="@style/Text"
+            android:layout_marginTop="5dp"
             android:layout_gravity="center"
             android:text="Xác nhận gmail" />
 
         <TextView
             android:id="@+id/textView4"
-            android:layout_width="250dp"
+            style="@style/Text"
+            android:layout_width="220dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="50dp"
-            android:text="Chúng tôi đã gửi mã tới gmail của bạn." />
+            android:layout_marginTop="10dp"
+            android:text="Chúng tôi đã gửi mã tới gmail của bạn."
+            android:textAlignment="center" />
 
         <EditText
             android:id="@+id/edtotp"
@@ -44,8 +47,8 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_margin="20dp"
-            android:ems="10"
             android:background="@drawable/bg_edit_text"
+            android:ems="10"
             android:gravity="center"
             android:hint="Nhập mã"
             android:inputType="textPersonName"
@@ -58,17 +61,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:layout_marginTop="5dp"
             android:layout_gravity="center"
             android:text="Gửi lại mã"
             android:textColor="#0C0C0C"
-            android:textSize="15dp" />
+            android:textSize="15sp" />
 
-        <Button
+        <TextView
             android:id="@+id/btnaccess"
             style="@style/Text_btn"
             android:background="@drawable/bg_btn"
             android:layout_width="250dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="30dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:gravity="center"
